# drf_web3_auth

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/core/: celery.py  settings.py  urls.py
src/drf_web3/: admin.py  apps.py  authentication.py  models.py  serializers.py  tasks.py  test_web3_auth.py  tests.py  urls.py  utils.py  views.py
src/drf_web3/migrations/: 0001_initial.py  0002_alter_event_created_at.py  0003_alter_event_tx_hash.py  0004_ethaccount.py
src/utils/: wait_postgres.py
